--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -79,7 +79,7 @@
       <div class="container-fluid d-flex align-items-center p-5">
         <div class="row d-flex justify-content-center">
           <div class="col-md-4 align-self-stretch border border-warning border-5 rounded rounded-4 p-2 mt-5 m-5 ">
-            <img src="/img/aboutme.png" class="img-fluid about-img p-0" alt="">
+            <img src="img/aboutme.png" class="img-fluid about-img p-0" alt="">
           </div>
 
           <div class="col-md-5 align-self-center">
@@ -206,20 +206,20 @@
           </div>
           <div class="col-md-12 d-md-flex">
             <div class="col-md-6 mb-4">
-              <img src="/img/myportfolio1.png" class="img-fluid" alt="">
+              <img src="img/myportfolio1.png" class="img-fluid" alt="">
             </div>
             <div class="row row-cols-1 row-cols-md-2 g-4">
               <div class="col">
-                <img src="/img/myportfolio2.png" class="img-fluid" alt="...">
+                <img src="img/myportfolio2.png" class="img-fluid" alt="...">
               </div>
               <div class="col">
-                <img src="/img/myportfolio3.png" class="img-fluid" alt="...">
+                <img src="img/myportfolio3.png" class="img-fluid" alt="...">
               </div>
               <div class="col">
-                <img src="/img/myportfolio4.png" class="img-fluid" alt="...">
+                <img src="img/myportfolio4.png" class="img-fluid" alt="...">
               </div>
               <div class="col">
-                <img src="/img/myportfolio5.png" class="img-fluid" alt="...">
+                <img src="img/myportfolio5.png" class="img-fluid" alt="...">
               </div>
 
             </div>
