--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -60,7 +61,7 @@
     <section class="herosection">
       <div class="container d-flex p-5">
         <div class="row">
-          <div class="col-md-5 p-4 align-self-center">
+          <div class="col-md-5 p-4 align-self-center" data-aos="fade-right" data-aos-delay="500">
             <p class="text-warning mb-4">Hello, Welcome</p>
             <h1 class="text-white mb-4"><b>I m Anderson Coper</b></h1>
             <p class="text-white-50">There are many variations of passages ofLorem Ipsum
@@ -68,7 +69,8 @@
               form, by injected humour,</p>
             <button class="btn btn-warning">Contact Us</button>
           </div>
-          <div class="col-md-7 d-md-flex justify-content-end align-item-center p-4">
+          <div class="col-md-7 d-md-flex justify-content-end align-item-center p-4" data-aos="fade-left"
+            data-aos-delay="500">
             <img src="/img/about.png" class="img-fluid" alt="">
           </div>
         </div>
@@ -78,11 +80,12 @@
     <section class="aboutme p-5">
       <div class="container-fluid d-flex align-items-center p-5">
         <div class="row d-flex justify-content-center">
-          <div class="col-md-4 align-self-stretch border border-warning border-5 rounded rounded-4 p-2 mt-5 m-5 ">
+          <div class="col-md-4 align-self-stretch border border-warning border-5 rounded rounded-4 p-2 mt-5 m-5 "
+            data-aos="fade-right" data-aos-delay="500">
             <img src="img/aboutme.png" class="img-fluid about-img p-0" alt="">
           </div>
 
-          <div class="col-md-5 align-self-center">
+          <div class="col-md-5 align-self-center" data-aos="fade-left" data-aos-delay="500">
             <h1 class="text-white mb-5">About <span class="text-warning">Me.</span></h1>
             <p class="text-white-50">
               There are many variations of passages ofLorem Ipsum
@@ -100,7 +103,7 @@
     <section class="myservice">
       <div class="container p-5">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-delay="500">
             <h1 class="text-white">My <span class="text-warning">Service</span></h1>
             <p class="text-white-50 text-start">There are many variations of passages ofLorem Ipsum
               available, but the majority havesuffered alteration in some
@@ -108,7 +111,7 @@
           </div>
           <div class="col-md-12 d-md-block d-sm-flex my-5">
             <div class="row row-cols-1 row-cols-md-3 g-4">
-              <div class="col">
+              <div class="col" data-aos="fade-right" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 text-center p-3 my-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
@@ -134,7 +137,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col">
+              <div class="col" data-aos="fade-down" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 d-flex justify-content-center p-3 my-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="38" viewBox="0 0 40 38" fill="none">
@@ -157,7 +160,7 @@
 
                 </div>
               </div>
-              <div class="col">
+              <div class="col" data-aos="fade-left" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 d-flex justify-content-center p-3 my-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
@@ -197,7 +200,7 @@
       <div class="container p-5">
         <div class="row ">
           <div class="col-md-12 d-flex justify-content-center text-center my-5">
-            <div class="col-md-5">
+            <div class="col-md-5" data-aos="fade-down" data-aos-delay="500">
               <h1 class="text-white">My <span class="text-warning">Protfolio</span></h1>
               <p class="text-white-50">There are many variations of passages ofLorem Ipsum
                 available, but the majority havesuffered alteration in some
@@ -205,10 +208,10 @@
             </div>
           </div>
           <div class="col-md-12 d-md-flex">
-            <div class="col-md-6 mb-4">
+            <div class="col-md-6 mb-4" data-aos="fade-right" data-aos-delay="500">
               <img src="img/myportfolio1.png" class="img-fluid" alt="">
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4" data-aos="fade-left" data-aos-delay="500">
               <div class="col">
                 <img src="img/myportfolio2.png" class="img-fluid" alt="...">
               </div>
@@ -231,14 +234,14 @@
     <section class="experience">
       <div class="container p-5">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-8" data-aos="fade-down" data-aos-delay="500">
             <h1 class="text-white">My <span class="text-warning">Experience</span></h1>
             <p class="text-white-50">There are many variations of passages ofLorem Ipsum <br>
               available, but the majority havesuffered alteration in some form, by injected humour,</p>
           </div>
           <div class="col-md-12 d-md-block d-sm-flex my-5">
             <div class="row row-cols-1 row-cols-md-3 g-4">
-              <div class="col">
+              <div class="col" data-aos="fade-right" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 text-center p-2">
                   </div>
@@ -252,7 +255,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col">
+              <div class="col" data-aos="fade-down" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 text-center p-2">
                   </div>
@@ -266,7 +269,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col">
+              <div class="col" data-aos="fade-left" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 text-center p-2">
                   </div>
@@ -371,6 +374,12 @@
       </div>
     </div>
   </footer>
+
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
