--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-md-7 d-md-flex justify-content-end align-item-center p-4" data-aos="fade-left"
             data-aos-delay="500">
-            <img src="/img/about.png" class="img-fluid" alt="">
+            <img src="img/about.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
