--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               form, by injected humour,</p>
             <button class="btn btn-warning">Contact Us</button>
           </div>
-          <div class="col-md-7 d-md-flex justify-content-end align-item-center p-4" data-aos="fade-left"
+          <div class="col-md-7 d-md-flex justify-content-end align-item-center p-4" data-aos="fade-right"
             data-aos-delay="500">
             <img src="img/about.png" class="img-fluid" alt="">
           </div>
@@ -85,7 +85,7 @@
             <img src="img/aboutme.png" class="img-fluid about-img p-0" alt="">
           </div>
 
-          <div class="col-md-5 align-self-center" data-aos="fade-left" data-aos-delay="500">
+          <div class="col-md-5 align-self-center" data-aos="fade-right" data-aos-delay="500">
             <h1 class="text-white mb-5">About <span class="text-warning">Me.</span></h1>
             <p class="text-white-50">
               There are many variations of passages ofLorem Ipsum
@@ -160,7 +160,7 @@
 
                 </div>
               </div>
-              <div class="col" data-aos="fade-left" data-aos-delay="500">
+              <div class="col" data-aos="fade-right" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 d-flex justify-content-center p-3 my-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
@@ -211,7 +211,7 @@
             <div class="col-md-6 mb-4" data-aos="fade-right" data-aos-delay="500">
               <img src="img/myportfolio1.png" class="img-fluid" alt="">
             </div>
-            <div class="row row-cols-1 row-cols-md-2 g-4" data-aos="fade-left" data-aos-delay="500">
+            <div class="row row-cols-1 row-cols-md-2 g-4" data-aos="fade-right" data-aos-delay="500">
               <div class="col">
                 <img src="img/myportfolio2.png" class="img-fluid" alt="...">
               </div>
@@ -269,7 +269,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col" data-aos="fade-left" data-aos-delay="500">
+              <div class="col" data-aos="fade-right" data-aos-delay="500">
                 <div class="card service-card h-100">
                   <div class="col-md-12 text-center p-2">
                   </div>
